# moonraker-telegram-bot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  Dockerfile-mjpeg  README.md  changes.md  changes_generated.md  pyproject.toml
.github/workflows/: ci.yaml
bot/: camera.py  configuration.py  flood_control.py  klippy.py  main.py  notifications.py  telegram_helper.py  telegram_network.py  timelapse.py  websocket_helper.py
bot/assets/: ffmpegcv_custom.py
scripts/: requirements.dev.txt  requirements.docker.mjpeg.txt  requirements.docker.opencv.txt  requirements.txt
tests/: __init__.py  camera_test.py  configuration_test.py  klippy_test.py  main_test.py  notifications_test.py  timelapse_test.py  websocket_helper_test.py
tests/resources/: telegram.conf  telegram_secrets.conf  telegram_with_auth.conf
