[project]
name = "moonraker-telegram-bot"
version = "0.0.0"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",    # line length handled by formatter
    "E722",    # bare except — existing pattern, fix later
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = [
    "camera",
    "configuration",
    "klippy",
    "notifications",
    "timelapse",
    "websocket_helper",
    "telegram_helper",
]

[tool.mypy]
python_version = "3.9"
no_namespace_packages = true
exclude = "tests"

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = ["tests"]
