[project]
name = "moonraker-telegram-bot"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "aiofiles==25.1.0",
    "anyio==4.12.1; python_version=='3.9'",
    "anyio==4.13.0; python_version>='3.10'",
    "apscheduler==3.11.2",
    "emoji==2.15.0",
    "ffmpegcv==0.3.18",
    "h2==4.3.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "orjson==3.10.14; python_version=='3.9'",
    "orjson==3.11.7; python_version>='3.10'",
    "pillow==10.4.0; python_version=='3.9'",
    "pillow==12.1.1; python_version>='3.10'",
    "python-telegram-bot[callback-data,http2,job-queue,rate-limiter,socks]==22.5; python_version=='3.9'",
    "python-telegram-bot[callback-data,http2,job-queue,rate-limiter,socks]==22.7; python_version>='3.10'",
    "tzlocal==5.3.1",
    "uvloop==0.22.1; platform_system!='Windows'",
    "websockets==15.0.1; python_version=='3.9'",
    "websockets==16.0; python_version>='3.10'",
]

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "memory-profiler==0.61.0",
    "mypy==1.15.0; python_version=='3.9'",
    "mypy==1.19.1; python_version>='3.10'",
    "numpy==2.4.3; python_version>='3.11'",
    "opencv-python~=4.11.0.86",
    "pip==26.0.1",
    "prek==0.3.8",
    "psutil==7.2.2",
    "pyproject-fmt>=2.20.0; python_version>='3.10'",
    "pytest==8.3.5; python_version=='3.9'",
    "pytest==9.0.2; python_version>='3.10'",
    "pytest-asyncio==0.25.3; python_version=='3.9'",
    "pytest-asyncio==1.3.0; python_version>='3.10'",
    "ruff==0.15.8",
    "types-aiofiles==25.1.0.20251011",
    "types-cachetools==6.2.0.20251022",
    "types-emoji==2.1.0.3",
    "types-orjson==3.6.2",
    "types-pillow==10.2.0.20240822",
    "types-pytz==2025.2.0.20251108",
    "types-setuptools==81.0.0.20260209",
    "typing-extensions==4.15.0",
]
docker-dev = [
    "line-profiler==5.0.2",
    "memory-profiler==0.61.0",
    "memray==1.19.1",
]
docker-opencv = [
    "opencv-python~=4.11.0.86",
]

[tool.ruff]
target-version = "py39"
line-length = 200
[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "D",     # pydocstyle
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "G",     # flake8-logging-format
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "N",     # pep8-naming
    "PERF",  # perflint
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # ruff-specific
    "S101",  # assert
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "T20",   # flake8-print
    "TCH",   # flake8-type-checking
    "TD",    # flake8-todos
    "TID",   # flake8-tidy-imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]
ignore = [
    # formatter-handled rules (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules)
    "D206",    # docstring-tab-indentation
    "D300",    # triple-single-quotes
    "E111",    # indentation-with-invalid-multiple
    "E114",    # indentation-with-invalid-multiple-comment
    "E117",    # over-indented
    "W191",    # tab-indentation
    # project-specific ignores
    "ANN401",  # any-type — too strict
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D105",    # undocumented-magic-method
    "D107",    # undocumented-public-init
    "D203",    # incorrect-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "E501",    # line length handled by formatter
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "SIM108",  # ternary — would produce very long lines
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TRY003",  # long exception messages — not worth extracting
]
[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
known-first-party = [
    "camera",
    "configuration",
    "klippy",
    "notifications",
    "timelapse",
    "websocket_helper",
    "telegram_helper",
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [ "D100", "PLR2004", "S101", "S105", "SLF001" ]

[tool.codespell]
skip = "uv.lock"

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
generate_python_version_classifiers = false
table_format = "long"

[tool.mypy]
python_version = "3.9"
mypy_path = "bot"
strict = true
enable_error_code = [ "ignore-without-code" ]
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disable_error_code = [ "method-assign" ]
[[tool.mypy.overrides]]
module = "_pytest.*"
follow_imports = "skip"

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = [ "tests" ]
pythonpath = [ "bot" ]
